--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=backend
+
+#\u8FD0\u884C\u7AEF\u53E3
+server.port=8080
+
+# MySQL\u914D\u7F6E
+spring.datasource.url=jdbc:mysql://localhost:3306/student_db?useSSL=false&serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA\u914D\u7F6E
+# ddl-auto=update \u7684\u4F5C\u7528\u662F\uFF1A\u542F\u52A8\u65F6\u68C0\u67E5\u5B9E\u4F53\u7C7B\u548C\u6570\u636E\u8868\u7684\u5DEE\u5F02\uFF0C\u5982\u679C\u8868\u4E0D\u5B58\u5728\u6216\u6709\u5B57\u6BB5\u7F3A\u5931\uFF0C\u5B83\u4F1A\u5C1D\u8BD5\u521B\u5EFA\u6216\u66F4\u65B0\uFF0C\u975E\u5E38\u9002\u5408\u5F00\u53D1\u9636\u6BB5\u3002
+# \u81EA\u52A8\u5EFA\u8868\uFF08\u5982\u679C\u8868\u4E0D\u5B58\u5728\u5C31\u4F1A\u81EA\u52A8\u521B\u5EFA\uFF09
+spring.jpa.hibernate.ddl-auto=update
