--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.11.0",
+    "element-plus": "^2.10.5",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
   },
